# bigimageviewer

./: .gitignore  Makefile  README.md  __init__.py  __main__.py  app.py  bigimagecomponent.py  bigimageviewer.py  create_pyramid.py  dzimage.py  loadedimage.py  requirements.txt  setup.cfg
src/bigimageviewer/: __init__.py  __main__.py  app.py  bigimage.py  bigimagecomponent.py  create_pyramid.py  dzimage.py  liimage.py  loadedimage.py
test/: test_dzimage.py  test_liimage.py  test_loadedimage.py
test/images/: adelboden.dzi  adelboden.tif  bw.dzi
test/images/adelboden_files/: vips-properties.xml
