[metadata]
name = bigimageviewer
version = 0.0.1
author = Matthew Baker
author_email = matt@mattbaker.ch
description = short package description
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/mbakereth/bigimageviewer
project_urls =
    repository = https://github.com/mbakereth/bigimageviewer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pyvips
    pyside6
    beautifulsoup4
    lxml
    numpy
    opencv-python
    large_image[tiff]

[options.packages.find]
where = src
